# e-mcdp

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  tmp.txt
data/02-synth-data/: g01_0-query.tsv  g01_0.ref.tsv  g01_1.query.tsv  g01_1.ref.tsv  g15_0-ref.tsv  g15_0.query.tsv  g15_01.ref.tsv  g15_02_sizes.tsv  g16_0.query.tsv  g16_0.ref.tsv  g24_8.query.tsv  g24_8.ref.tsv
data/03-test-data/: section-split.query.tsv  section-split.ref.tsv  simple-bases.ref.tsv
data/logs/: 01-sample-data-hirt-windows.txt  01-sample-data-hirt.txt  02-synth-data-g15_0-windows-basic-02.txt  02-synth-data-g15_0-windows-basic-03-fast.txt  02-synth-data-g15_0-windows-basic.txt  02-synth-data-g15_0-windows-dense.txt  02-synth-data-g15_01-windows-base-naive-5000.txt  02-synth-data-g15_01-windows-basic-fast-5000.txt  02-synth-data-g15_01-windows-basic-fast.txt  02-synth-data-g15_01-windows-basic-naive-5000.txt  02-synth-data-g15_01-windows-basic-naive.txt  02-synth-data-g15_01-windows-dense-fast.txt  02-synth-data-g15_01-windows-dense-naive.txt
data/output/: 01-sample-data-hirt-windows.tsv  01-sample-data-hirt.txt  02-synth-data-g01_0.txt  02-synth-data-g01_1.txt  02-synth-data-g15_0-windows-basic-02.tsv  02-synth-data-g15_0-windows-basic-03-fast.tsv  02-synth-data-g15_0-windows-dense.tsv  02-synth-data-g15_0.txt  02-synth-data-g15_01-windows-basic-fast-5000.tsv  02-synth-data-g15_01-windows-basic-fast.tsv  02-synth-data-g15_01-windows-basic-naive-5000.tsv  02-synth-data-g15_01-windows-dense-fast.tsv  log.txt  (+2 more)
data_science/: windows_p-value_graph.ipynb
src/: main.cpp
(+580 files in other folders)
